--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Train Schedule change here
+  h1 Train Schedule change here in new branch
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
